--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,10 +14,10 @@ jobs:
           echo "Job triggered by ${{ github.event_name }}, on self-hosted ${{ runner.os }}."
       - name: Check out repository
         uses: actions/checkout@v3
-      - name: Setup Rclone
-        uses: AnimMouse/setup-rclone@v1
-        with:
-          rclone_config: ${{ secrets.RCLONE_CONFIG }}
+      # - name: Setup Rclone
+      #   uses: AnimMouse/setup-rclone@v1
+      #   with:
+      #     rclone_config: ${{ secrets.RCLONE_CONFIG }}
       - name: Publish
         run: |
           tkname="ocptk"
