--- a/ocp.yml
+++ b/ocp.yml
@@ -2,27 +2,31 @@ name: toolkit_name
 id: toolkit_id
 type: toolkit
 default:
-  version: 2023.0610.aaaaaa
-  config: "gnu-Release"
+  version: 0.1.0
+  configuration: "gnu-Release"
+  scripts: ["prepare","publish_bin","publish_src"]
 versions:
-  - id: 2023.0610.aaaaaa
-    config: [gnu-Debug, gnu-Release, gnu-Release-superlu]
-    dependency: []
-  - id: 2022.0606.bbbbbb
-    config: [gnu-Debug, gnu-Release,]
-    dependency: []
+  - id: 0.1.0
+    default: "gnu-Debug"
+    configurations: [gnu-Debug, gnu-Release, gnu-Release-superlu]
 configs: #
   - id: gnu-Debug
-    run: source config/install.sh linux-gnu-Debug
+    run: configurations/install.sh
+    arguments: ["linux-gnu-Debug"]
   - id: gnu-Release
-    run: source config/install.sh linux-gnu-Release
+    run: configurations/install.sh
+    arguments: ["linux-gnu-Release"]
   - id: gnu-Release-superlu
     dependencies: ["superlu"]
     run: source config/install.sh linux-gnu-Debug
 dependencies:
-  - id: dep1
-    type: toolkit
-    version: ["2023.0610.aaaaaa", "2022.0606.bbbbbb"]
   - id: superlu
+    uid: dep1
     type: external
-    version: ["1.0.0", "2.0.0", "3.0.0"]
+    default:
+      version: "1.1.0"
+      configuration: "gnu-Release"
+    versions: 
+      -id: "1.1.0"
+        default: "int64"
+        configurations: ["int64"]
